# swig

./: CMakeLists.txt
.github/workflows/: windows-cmake.yml
Examples/test-suite/csharp/: CMakeLists.txt  Makefile.in  library.csproj.in  runme.csproj.in  test.csproj.in
Lib/csharp/: csharphead.swg  director.swg  wchar.i
Source/Modules/: csharp.cxx
